# services/lost-item-service/src/main/java/com/foundflow/lostitem/controller/LostReportController.java
@@ -4,11 +4,11 @@ import com.foundflow.lostitem.dto.CreateLostReportRequest;
 import com.foundflow.lostitem.dto.CountResponse;
 import com.foundflow.lostitem.dto.HistogramResponse;
 import com.foundflow.lostitem.dto.LostReportResponse;
-import com.foundflow.lostitem.dto.PhotoUrlResponse;
 import com.foundflow.lostitem.dto.UpdateLostReportRequest;
 import com.foundflow.lostitem.domain.ReportStatus;
 import com.foundflow.lostitem.service.LostReportService;
 import com.foundflow.photo.storage.PhotoData;
+import com.foundflow.photo.storage.PhotoUrlResponse;
 import jakarta.validation.Valid;
 import org.springframework.core.io.InputStreamResource;
 import org.springframework.http.MediaType;
